--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "vercel-build": "npm ci && npm run build"
-
   },
   "dependencies": {
+    "emailjs-com": "^3.2.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
